--- a/sqlite_odbc_sample/index.html
+++ b/sqlite_odbc_sample/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
     <style>
         <!--OL { counter-reset: item; padding-left: 10px; }-->
         LI { display: block }
