--- a/sqlite_odbc_sample/index.html
+++ b/sqlite_odbc_sample/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
     <meta charset="UTF-8">
     <style>
@@ -12,14 +12,14 @@
     </head>
     
     <body>
-        <h1>Comment utiliser une base de donnée SQLite avec Open Office Calc ou Microsoft Office Excel sur Windows 10 ?</h1>
+        <h1>Comment utiliser une base de donnÃ©e SQLite avec Open Office Calc ou Microsoft Office Excel sur Windows 10 ?</h1>
         <ol>
             <li>
-                Comment récupérer le projet avec GitHub Desktop ?<br>
+                Comment rÃ©cupÃ©rer le projet avec GitHub Desktop ?<br>
                 <a href=".\github\github_fr.html">.\github\github_fr.html</a><br><br>
             </li>
             <li>
-                Comment construire une base de donnée SQLite ?<br>
+                Comment construire une base de donnÃ©e SQLite ?<br>
                 <a href=".\sqlite\sqlite_fr.html">.\sqlite\sqlite_fr.html</a><br><br>
             </li>
             <li>
@@ -27,15 +27,15 @@
                 <a href=".\www.ch-werner.de_sqliteodbc\sqliteodbc_fr.html">.\www.ch-werner.de_sqliteodbc\sqliteodbc_fr.html</a><br><br>
             </li>
             <li>
-                Comment configurer une source de donnée utilisateur sur Windows ?<br>
+                Comment configurer une source de donnÃ©e utilisateur sur Windows ?<br>
                 <a href=".\admin_odbc\admin_odbc_fr.html">.\admin_odbc\admin_odbc_fr.html</a><br><br>
             </li>
             <li>
-                Comment configurer une source de donnée SQLite sur Open Office Calc ?<br>
+                Comment configurer une source de donnÃ©e SQLite sur Open Office Calc ?<br>
                 <a href=".\open_office\open_office_fr.html">.\open_office\open_office_fr.html</a><br><br>
             </li>
             <li>
-                Comment configurer une source de donnée SQLite sur Microsoft Office Excel ?<br>
+                Comment configurer une source de donnÃ©e SQLite sur Microsoft Office Excel ?<br>
                 <a href=".\microsoft_office\microsoft_office_fr.html">.\microsoft_office\microsoft_office_fr.html</a><br><br>
             </li>
         </ol>
