--- a/sqlite_odbc_sample/microsoft_office/microsoft_office_fr.html
+++ b/sqlite_odbc_sample/microsoft_office/microsoft_office_fr.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
     <style>
         <!--OL { counter-reset: item; padding-left: 10px; }-->
         LI { display: block }
@@ -11,11 +12,11 @@
     </head>
     
     <body>
-        <h1>Comment configurer une source de donnée SQLite sur Microsoft Office Excel ?</h1>
+        <h1>Comment configurer une source de donnÃ©e SQLite sur Microsoft Office Excel ?</h1>
         
         <ol>
             <li>Lancer Microsoft Office Excel.</li>
-            <li>Créer un nouveau classeur.</li>
+            <li>CrÃ©er un nouveau classeur.</li>
             <li>Enregistrer ce classeur sous <tt>C:\sqlite_odbc_sample\scripts\microsoft_office\ex1.xlsx</tt>.<br><br><img src=".\img\2__microsoft_office__Enregistrer.png"><br><br></li>
             <li>
                 Aller dans Data->Get Data->From Other Sources->From ODBC.<br><br><img src=".\img\4__microsoft_office__From_ODBC__Ouvrir.png"><br><br>
@@ -25,7 +26,7 @@
                 </ol>
             </li>
             <li>
-                Dans la fenêtre Navigator
+                Dans la fenÃªtre Navigator
                 <ol>
                     <li>Selectionner la table "USER".</li>
                     <li>Cliquer sur "Load".
@@ -51,7 +52,7 @@
                 <ol>
                     <li>Lancer <tt>cmd.exe</tt> dans <tt>C:\sqlite_odbc_sample\scripts</tt>.</li>
                     <li>Executer <tt>ex1.INSERT.Charlie.Chaplin.cmd</tt>.<br><br><img src=".\img\7_2__ex1.INSERT_Charlie_Chaplin_cmd.png"><br><br></li>
-                    <li>Actualiser le tableau croisé.<br><br><img src=".\img\6_3__microsoft_office__Sheet2__Actualiser_Avant.png"><br><br></li>
+                    <li>Actualiser le tableau croisÃ©.<br><br><img src=".\img\6_3__microsoft_office__Sheet2__Actualiser_Avant.png"><br><br></li>
                     <li>Observer l'insertion du nouvelle enregistrement.<br><br><img src=".\img\6_4__microsoft_office__Sheet2__Afficher.png"><br><br></li>
                     <li>Executer <tt>ex1.DELETE.Charlie.Chaplin.cmd</tt>.<br><br><img src=".\img\7_5__ex1.DELETE_Charlie_Chaplin_cmd.png"><br><br></li>
                     <li>Actualiser et observer la suppression de l'enregistrement.<br><br><img src=".\img\7_2__microsoft_office__Sheet2__Afficher.png"><br><br></li>
