--- a/sqlite_odbc_sample/www.ch-werner.de_sqliteodbc/sqliteodbc_fr.html
+++ b/sqlite_odbc_sample/www.ch-werner.de_sqliteodbc/sqliteodbc_fr.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
     <style>
         <!--OL { counter-reset: item; padding-left: 10px; }-->
         LI { display: block }
@@ -20,8 +21,8 @@
                     <li>
                         Executer <tt>C:\Windows\<b><font color="red">syswow64</font></b>\odbcad32.exe</tt>.
                         <ol> 
-                            <li>Sélectionner l'onglet "Pilotes ODBC".</li>
-                            <li>Vérifier que le pilote "SQLite3 ODBC Driver" est présent.</li>
+                            <li>SÃ©lectionner l'onglet "Pilotes ODBC".</li>
+                            <li>VÃ©rifier que le pilote "SQLite3 ODBC Driver" est prÃ©sent.</li>
                             <li>Cliquer sur "OK".<br><br><img src=".\img\syswow64_odbcad32__Polites_ODBC__OK.png"><br><br></li>
                         </ol>
                     </li>
@@ -33,8 +34,8 @@
                     <li>
                         <li>Executer <tt>C:\Windows\<b><font color="red">system32</font></b>\odbcad32.exe</tt>.
                         <ol> 
-                            <li>Sélectionner l'onglet "Pilotes ODBC".</li>
-                            <li>Vérifier que le pilote "SQLite3 ODBC Driver" est présent.</li>
+                            <li>SÃ©lectionner l'onglet "Pilotes ODBC".</li>
+                            <li>VÃ©rifier que le pilote "SQLite3 ODBC Driver" est prÃ©sent.</li>
                             <li>Cliquer sur "OK".<br><br><img src=".\img\system32_odbcad32__Polites_ODBC__OK.png"><br><br></li>
                         </ol>
                     </li>
